# gdal-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GDAL_MCP_USAGE.md  GITHUB_ISSUES_GUIDE.md  KNOWN_ISSUES.md  PROMPT_IMPLEMENTATION_TASKS.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.2.0.md  demo_gdal_mcp.py  gdal_mcp_design.md  mypy.ini  pyproject.toml  test_gdal_mcp.py
.devcontainer/: README.md  postCreateCommand.sh
.github/workflows/: README.md  build.yml  ci.yml  quality.yml  test.yml
.plans/: v1.1.0-SUMMARY.md  v1.1.0-vector-parity.md
.windsurf/rules/: conport.md  styleguide.md
.windsurf/workflows/: .index.md  bootstrap.md  continue.md  fix.md  imprint.md  ingest.md  ingest_pass1.md  plan.md
conport_export/: active_context.md  decision_log.md  product_context.md  progress_log.md  system_patterns.md
conport_export/custom_data/: GDALDocs.md  ProjectDocs.md
conport_export/product_context/: architecture.md  fastmcp-guidelines.md  mcp-guidelines.md  readme.md  roadmap.md  tools.md
docs/: CONTRIBUTING.md  ROADMAP.md  VISION.md
docs/ADR/: 0017-pydantic-models-for-structured-io.md  0021-llm-optimized-tool-descriptions.md  0022-workspace-scoping-and-access-control.md  0026-epistemic-governance.md  0027-spatial-query-primitives.md
docs/design/: architecture.md  distribution.md  tools.md
docs/tasks/: 1001-terrain-analysis-prompt.md  1002-reprojection-methodology-prompt.md  1003-data-quality-prompt.md  1004-conversion-strategy-prompt.md  1005-multicriteria-prompt.md  1006-prompt-test-harness.md  1007-resampling-parameter-prompt.md  1008-compression-parameter-prompt.md  1009-validation-checklist-prompt.md  1010-workflow-planning-prompt.md  1011-prompt-documentation-update.md  1020-transactional-workflow-adr.md  2001-epistemic-risk-classification.md  2002-epistemic-schema-and-store.md  2003-epistemic-preflight-prompt.md  2004-epistemic-middleware-and-policy.md  2005-epistemic-reproject-integration.md  2006-epistemic-resample-integration.md  2007-epistemic-hydrology-integration.md  2008-epistemic-aggregation-integration.md  README.md
gdal_mcp/: __init__.py  __main__.py  prompts.py  server.py  utils.py
gdal_mcp/tools/: __init__.py  convert.py  info.py
scripts/: README.md  create_issues_from_tasks.py
server/: __init__.py  __main__.py  gdal_tools.py  gdalinfo_tool.py
server/enums/: __init__.py  format.py  resampling.py
src/: __main__.py  app.py  bench.py  config.py  middleware.py  prompts.py  server.py  validation.py
src/gdal_mcp/: app.py  ingest.py  models.py  server.py
src/middleware/: preflight.py  reflection_config.py
src/models/: __init__.py  common.py  compression.py
src/prompts/: aggregation.py  crs.py  hydrology.py  resampling.py
test/: MANUAL_TESTING.md  REFLECTION_TESTING.md  TESTING_RESULTS_v1.0.0.md  conftest.py  test_band_metadata.py  test_create_issues_script.py  test_middleware.py  test_raster_tools.py  test_server_validation.py  test_tools_unit.py  test_vector_tools.py  v1.1.0-ROUND2-TESTING.md  v1.1.0-TESTING.md
tests/: test_gdal_mcp.py  test_http_mcp.py  test_unit_gdal_tools.py
(+40 files in other folders)
