[project]
name = "gdal-mcp"
version = "0.1.0"
description = "GDAL MCP Server - Expose GDAL operations as MCP tools for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.14.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server"]
exclude = ["test_data", "test_data.*"]

[project.scripts]
gdal-mcp-server = "server:gdal_tools.run_server"
