[project]
name = "gdal-mcp"
version = "0.1.0"
description = "GDAL MCP Server - Expose GDAL operations as MCP tools for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]
license = { file = "LICENSE" }
keywords = ["GDAL", "MCP", "geospatial", "CLI", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server"]
exclude = ["test_data", "test_data.*"]

[project.scripts]
gdal-mcp-server = "server.gdal_tools:cli_main"
