[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "gdal-mcp"
version = "0.0.1"
description = "FastMCP server for Python-native GDAL ops (Rasterio/PyProj/pyogrio|Fiona/Shapely)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "GDAL MCP Team" }
]
keywords = ["gdal", "mcp", "fastmcp", "geospatial", "cli"]

# Runtime dependencies: FastMCP for MCP server, lightweight libs for docs ingestion & CLI UX.
dependencies = [
  "fastmcp>=2.0,<3.0",
  "typer>=0.12",
  "rich>=13.0",
  "pyyaml>=6.0",
  "python-frontmatter>=1.0.0",
  "markdown-it-py>=3.0.0",
  # Python-native geospatial stack
  "rasterio>=1.3",
  "pyproj>=3.6",
  "shapely>=2.0",
  "pyogrio>=0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.5",
  "types-PyYAML>=6.0.0.20240917",
]

[project.scripts]
# Main server entrypoint (will start the FastMCP server; stub for now)
"gdal-mcp" = "gdal_mcp.__main__:main"
# Docs ingestion CLI (idempotent ConPort exporter)
"gdal-mcp-ingest" = "gdal_mcp.ingest:app"
# Benchmark CLI (perf harness; stub for now)
"gdal-mcp-bench" = "gdal_mcp.bench:main"

[project.urls]
Homepage = "https://github.com/JordanGunn/gdal-mcp"
Documentation = "https://github.com/JordanGunn/gdal-mcp"

[tool.hatch.build.targets.wheel]
packages = [{ include = "gdal_mcp", from = "src" }]
